# toDoList

./: README.md  app.py  dockerfile  pyproject.toml  requirements.txt  todoDB
.github/workflows/: python-app.yml
routes/: todo_api.py
src/adapters/app/: application.py  schema.sql
src/adapters/app/routes/: swagger_api.py  todo_api.py
src/adapters/app/static/: swagger.json
src/adapters/db/: todo_repository.py
src/domain/model/: todo.py
src/domain/ports/: __init__.py  todo_service.py
src/main/: config.py  containers.py  todo_containers.py
static/: swagger.json
tests/: conftest.py  test_todo.py
