[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Laura Jimenez <lauraisa1298@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = {extras = ["async"], version = "^2.2.3"}
flask-swagger-ui = "^4.11.1"
flask-cors = "^3.0.10"
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-flask = "^1.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]